--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "bunx @biomejs/biome check --write --unsafe ."
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev --turbopack",
+    "lint": "bunx @biomejs/biome check --write --unsafe .",
+    "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -21,6 +26,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.487.0",
     "next": "latest",
     "postcss": "^8.5.3",
@@ -39,6 +46,8 @@
     "@types/node": "20.8.10",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "drizzle-kit": "^0.30.6",
+    "tsx": "^4.19.3",
     "typescript": "^5.2.2"
   }
 }
