--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
+    "svix": "^1.64.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
