--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.487.0",
     "next": "latest",
     "postcss": "^8.5.3",
@@ -41,6 +43,7 @@
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
