--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "@biomejs/biome": "1.9.4",
     "@types/node": "20.8.10",
     "@types/react": "18.2.33",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
     "@types/react-dom": "18.2.14",
     "drizzle-kit": "^0.30.6",
     "tsx": "^4.19.3",
     "typescript": "^5.2.2"
+    "typescript": "^5.8.3"
   }
 }
