--- a/package.json
+++ b/package.json
@@ -11,51 +11,45 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.14.3",
-    "@hookform/resolvers": "^5.0.1",
+    "@clerk/nextjs": "^6.15.1",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/uuid": "^10.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@tailwindcss/postcss": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.487.0",
-    "next": "latest",
+    "next": "^15.3.0",
     "postcss": "^8.5.3",
-    "react": "^18.2.0",
+    "react": "19.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.55.0",
-    "svix": "^1.64.0",
-    "tailwind-merge": "^3.1.0",
-    "tailwindcss": "^4.1.3",
+    "react-dom": "^19.1.0",
+    "svix": "^1.64.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.33",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "18.2.14",
-    "drizzle-kit": "^0.30.6",
-    "tsx": "^4.19.3",
-    "typescript": "^5.2.2"
-    "typescript": "^5.8.3"
+    "@biomejs/biome": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/uuid": "latest",
+    "drizzle-kit": "latest",
+    "tsx": "latest",
+    "typescript": "latest"
   }
 }
