--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "drizzle-seed": "^0.3.1",
+    "jotai": "^2.12.3",
     "lucide-react": "^0.487.0",
     "next": "^15.3.0",
     "postcss": "^8.5.3",
