--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
+    "db:seed": "bun db/seed.ts",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbopack",
     "lint": "bunx @biomejs/biome check --write --unsafe .",
