--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.15.1",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -23,6 +24,7 @@
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-form": "^1.5.0",
     "arktype": "^2.1.20",
@@ -35,10 +37,12 @@
     "jotai": "^2.12.3",
     "lucide-react": "^0.487.0",
     "next": "^15.3.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.3",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
