chore: Deploy to cloudflare workers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["arktype", "sonner", "svix", "uuidv"]
+  "cSpell.words": [
+    "arktype",
+    "opennextjs",
+    "sonner",
+    "subsuku",
+    "svix",
+    "uuidv"
+  ]
 }
