--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.15.1",
+    "@clerk/nextjs": "^6.19.1",
     "@neondatabase/serverless": "^1.0.0",
-    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.2.4",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@tanstack/react-form": "^1.5.0",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/react-form": "^1.9.1",
     "arktype": "^2.1.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,9 +37,9 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-seed": "^0.3.1",
-    "jotai": "^2.12.3",
+    "jotai": "^2.12.4",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.0",
+    "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "19.1.0",
@@ -48,14 +48,14 @@
     "sonner": "^2.0.3",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5",
+    "tw-animate-css": "^1.2.9",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "latest",
-    "@opennextjs/cloudflare": "^1.0.0-beta.4",
+    "@opennextjs/cloudflare": "^1.0.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
