--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "db:seed": "bun db/seed.ts",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbopack",
-    "deploy": "bun opennextjs-cloudflare build && bunx wrangler deploy ",
     "lint": "bunx @biomejs/biome check --write --unsafe .",
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.19.1",
+    "@clerk/nextjs": "^6.19.2",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -27,8 +26,8 @@
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.6",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@tanstack/react-form": "^1.9.1",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@tanstack/react-form": "^1.11.1",
     "arktype": "^2.1.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,7 +35,6 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
-    "drizzle-seed": "^0.3.1",
     "jotai": "^2.12.4",
     "lucide-react": "^0.487.0",
     "next": "^15.3.2",
@@ -46,22 +44,22 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.3",
-    "svix": "^1.64.1",
+    "svix": "^1.65.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.9",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "latest",
-    "@opennextjs/cloudflare": "^1.0.0",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/uuid": "latest",
-    "drizzle-kit": "latest",
-    "tsx": "latest",
-    "typescript": "latest"
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "@types/uuid": "^10.0.0",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-seed": "^0.3.1",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
