refactor: Move file

--- a/.github/workflows/update-exchange-rate.yml
+++ b/.github/workflows/update-exchange-rate.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Execute script
-        run: bun db/update-exchange-rate.ts
+        run: bun script/update-exchange-rate.ts
