--- a/.github/workflows/notify-subscription-renewal.yml
+++ b/.github/workflows/notify-subscription-renewal.yml
@@ -1,4 +1,4 @@
-name: Update exchange rate
+name: Notify subscription renewal
 
 on:
   schedule:
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      OPEN_EXCHANGE_RATES_APP_ID: ${{ secrets.OPEN_EXCHANGE_RATES_APP_ID }}
+      MAIL_ADDRESS_FOR_NOTIFICATION: ${{ secrets.MAIL_ADDRESS_FOR_NOTIFICATION }}
+      MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+      MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -22,4 +24,4 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Execute script
-        run: bun script/update-exchange-rate.ts
+        run: bun script/notify.ts
