--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "analyze": "ANALYZE=true next build",
-    "build": "next build",
+    "build": "ANALYZE=false next build",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -30,17 +30,21 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.6",
     "@tanstack/react-form": "^1.11.1",
+    "@types/nodemailer": "^6.4.17",
     "arktype": "^2.1.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "drizzle-seed": "^0.3.1",
     "jotai": "^2.12.4",
     "lucide-react": "^0.487.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "postcss": "^8.5.3",
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
@@ -60,7 +64,6 @@
     "@types/react-dom": "^19.1.3",
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.1",
-    "drizzle-seed": "^0.3.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
