--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.6",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "^1.11.1",
     "@types/nodemailer": "^6.4.17",
     "arktype": "^2.1.20",
@@ -48,6 +49,8 @@
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "svix": "^1.65.0",
     "tailwind-merge": "^3.2.0",
