--- a/.github/workflows/notify-subscription-renewal.yml
+++ b/.github/workflows/notify-subscription-renewal.yml
@@ -14,6 +14,7 @@ jobs:
       MAIL_ADDRESS_FOR_NOTIFICATION: ${{ secrets.MAIL_ADDRESS_FOR_NOTIFICATION }}
       MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
       MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
+      TZ: 'Asia/Tokyo'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
