--- a/.github/workflows/update-next-update.yml
+++ b/.github/workflows/update-next-update.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      TZ: 'Asia/Tokyo'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
