--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-form": "^1.12.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
     "@types/nodemailer": "^6.4.17",
     "arktype": "^2.1.20",
     "class-variance-authority": "^0.7.1",
@@ -62,9 +64,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@happy-dom/global-registrator": "^18.0.1",
+    "@types/bun": "^1.2.16",
     "@types/node": "^22.15.24",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
