fix: Correct error
Run git checkout production
Switched to a new branch 'production'
branch 'production' set up to track 'origin/production'.
Committer identity unknown

*** Please tell me who you are.

Run

  git config --global user.email "you@example.com"
  git config --global user.name "Your Name"

to set your account's default identity.
Omit --global to set the identity only in this repository.

fatal: empty ident name (for <runner@pkrvmbietmlfzoi.motzxs420emefmycxb4gafpwpg.bx.internal.cloudapp.net>) not allowed
Error: Process completed with exit code 128.

--- a/.github/workflows/deploy-to-netlify.yml
+++ b/.github/workflows/deploy-to-netlify.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Merge to production
         run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git checkout production
           git merge --no-ff origin/${{ github.event.pull_request.base.ref }}
           git push origin production
