--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^6.20.1",
     "@neondatabase/serverless": "^1.0.0",
     "@next/bundle-analyzer": "^15.3.2",
+    "@next/third-parties": "^15.4.0-canary.102",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
