--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2",
     "@happy-dom/global-registrator": "^18.0.1",
     "@types/bun": "^1.2.16",
     "@types/node": "^22.15.24",
