--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,8 +1,8 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "assist": { 
-    "actions": { 
-      "source": { 
+  "assist": {
+    "actions": {
+      "source": {
         "organizeImports": {
           "level": "on",
           "options": {
@@ -18,7 +18,7 @@
 
               // ===== lib modules =====
               // ./libディレクトリを優先してimport
-              { "type": false, "source": "./lib/**" },
+              { "type": false, "source": "**/lib/**" },
 
               // ===== user modules =====
               // ./libディレクトリ以外のユーザー定義モジュールをまとめてキャッチ
@@ -39,9 +39,11 @@
       }
     }
   },
+  "files": {
+    "includes": ["**", "!**/ui/**", "!drizzle/**"]
+  },
   "formatter": {
-    "indentStyle": "space",
-    "includes": ["**"]
+    "indentStyle": "space"
   },
   "linter": {
     "enabled": true,
