--- a/.github/workflows/notify-subscription-renewal.yml
+++ b/.github/workflows/notify-subscription-renewal.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   cron:
-    name: Update exchange rate
+    name: Notify subscription renewal
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -18,11 +18,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
       - name: Install dependencies
         run: bun install
+        
       - name: Execute script
         run: bun script/notify-subscription-renewal.ts
