--- a/.github/workflows/update-next-update.yml
+++ b/.github/workflows/update-next-update.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   cron:
-    name: Update exchange rate
+    name: Update next update date
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -15,11 +15,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
       - name: Install dependencies
         run: bun install
+        
       - name: Execute script
         run: bun script/update-next-update.ts
