refactor: Migrate GET /subscription and /subscriptions with rust
commit e80644027e15b5d3c33a4a3d69c604fe997ee5de
Author: q-1-p <github.pubilc@outlook.com>
Date:   Tue Sep 2 10:16:14 2025 +0900

    feat: Migrate get subscriptions

commit 71c5c4af15ebe4663e78f8364ab66a08a426d661
Author: q-1-p <github.pubilc@outlook.com>
Date:   Tue Sep 2 10:15:52 2025 +0900

    feat: Migrate get subscription

commit 485f248842bda2e5b969364a3675234cbe477d9e
Author: q-1-p <github.pubilc@outlook.com>
Date:   Sun Aug 31 21:56:59 2025 +0900

    feat: Create get subscription api

commit 9eb92d93c9b7ea115b3af5a29ea01d745ff66e54
Author: q-1-p <github.pubilc@outlook.com>
Date:   Sun Aug 31 21:56:17 2025 +0900

    feat: Create routing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,16 @@
   "biome.configurationPath": "./app/browser/biome.jsonc",
   "cSpell.words": [
     "arktype",
+    "chrono",
     "cmdk",
+    "Datelike",
+    "dotenv",
+    "ILIKE",
     "opennextjs",
+    "rustls",
     "serde",
     "sonner",
+    "sqlx",
     "subsuku",
     "svix",
     "uuidv"
