--- a/internal/api/Cargo.toml
+++ b/internal/api/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0.143"
 tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
 
 domain = { path = "../domain" }
+infrastructure = { path = "../infrastructure" }
