--- a/internal/domain/Cargo.toml
+++ b/internal/domain/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
+regex = "1.11.2"
+uuid = { version = "1.18.0", features = ["v4"] }
