--- a/internal/infrastructure/Cargo.toml
+++ b/internal/infrastructure/Cargo.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 domain = { path = "../domain" }
+dotenv = "0.15.0"
+sqlx = { version = "0.8.6", features = [
+    "runtime-tokio",
+    "postgres",
+    "tls-rustls",
+    "uuid",
+    "chrono",
+] }
+tokio = { version = "1.47.1", features = ["full"] }
