--- a/app/browser/package.json
+++ b/app/browser/package.json
@@ -46,13 +46,13 @@
     "drizzle-seed": "^0.3.1",
     "jotai": "^2.12.5",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.2",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "postcss": "^8.5.4",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
@@ -68,8 +68,8 @@
     "@happy-dom/global-registrator": "^18.0.1",
     "@types/bun": "^1.2.16",
     "@types/node": "^22.15.24",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
