feat: Unify notation shaking

--- a/app/browser/biome.jsonc
+++ b/app/browser/biome.jsonc
@@ -40,7 +40,7 @@
     }
   },
   "files": {
-    "includes": ["**", "!**/ui/**", "!drizzle/**"]
+    "includes": ["**", "!**/ui", "!drizzle"]
   },
   "formatter": {
     "indentStyle": "space"
