--- a/app/browser/biome.jsonc
+++ b/app/browser/biome.jsonc
@@ -66,7 +66,8 @@
       "enabled": true
     },
     "parser": {
-      "cssModules": true
+      "cssModules": true,
+      "tailwindDirectives": true
     }
   },
   "vcs": {
