--- a/app/browser/package.json
+++ b/app/browser/package.json
@@ -13,66 +13,66 @@
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
-    "@clerk/nextjs": "^6.20.1",
-    "@neondatabase/serverless": "^1.0.0",
-    "@next/bundle-analyzer": "^15.3.2",
-    "@next/third-parties": "^15.4.0-canary.102",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tanstack/react-form": "^1.12.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.3.0",
-    "@types/nodemailer": "^6.4.17",
-    "arktype": "^2.1.20",
+    "@clerk/nextjs": "^6.37.3",
+    "@neondatabase/serverless": "^1.0.2",
+    "@next/bundle-analyzer": "^15.5.12",
+    "@next/third-parties": "^15.5.12",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tanstack/react-form": "^1.28.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/nodemailer": "^6.4.22",
+    "arktype": "^2.1.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "cors": "^2.8.5",
+    "cors": "^2.8.6",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.43.1",
     "drizzle-seed": "^0.3.1",
-    "jotai": "^2.12.5",
+    "jotai": "^2.17.1",
     "lucide-react": "^0.487.0",
-    "next": "^15.3.2",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.3",
-    "postcss": "^8.5.4",
-    "react": "19.1.0",
+    "nodemailer": "^7.0.13",
+    "postcss": "^8.5.6",
+    "react": "^19.2.4",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "sonner": "^2.0.3",
-    "svix": "^1.66.0",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8",
+    "sonner": "^2.0.7",
+    "svix": "^1.84.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.3.2",
+    "tw-animate-css": "^1.4.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2",
+    "@biomejs/biome": "^2.3.14",
     "@happy-dom/global-registrator": "^18.0.1",
-    "@types/bun": "^1.2.16",
-    "@types/node": "^22.15.24",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/bun": "^1.3.8",
+    "@types/node": "^22.19.9",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
     "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.31.1",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "drizzle-kit": "^0.31.8",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
