--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "cd apps/browser && bun run build",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:seed": "bun tests/data/seed.ts",
-    "db:studio": "drizzle-kit studio",
-    "dev": "cd apps/browser && bun run dev",
+    "build": "dotenvx run -- bun run --cwd apps/browser build",
+    "db:generate": "dotenvx run -- drizzle-kit generate",
+    "db:migrate": "dotenvx run -- drizzle-kit migrate",
+    "db:push": "dotenvx run -- drizzle-kit push",
+    "db:seed": "dotenvx run -- bun tests/data/seed.ts",
+    "db:studio": "dotenvx run -- drizzle-kit studio",
+    "dev": "dotenvx run -- bun run --cwd apps/browser dev",
     "lint": "bunx @biomejs/biome check --write --unsafe ."
   },
   "workspaces": [
@@ -24,7 +24,6 @@
     "@types/nodemailer": "^6.4.22",
     "arktype": "^2.1.29",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.43.1",
     "drizzle-seed": "^0.3.1",
     "nodemailer": "^7.0.13",
