--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -2,5 +2,10 @@
   "$schema": "https://json.schemastore.org/package",
   "name": "infrastructure",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/nextjs": "^6.37.3",
+    "@neondatabase/serverless": "^1.0.2"
+  }
 }
